src/tess/tl/test/fail/test_fail_unknown_type_arrow_return_nested.tl
// Unknown type name in a nested arrow return type should be rejected.
#module main
make() -> Ptr[Quux] { null }
main() -> CInt      { 0    }
